@@ -1,10 +1,0 @@
-The Keybinder package contains a library for registering global keyboard
-shortcuts.
-Keybinder works with GTK-based applications using the X Window System.
-
-The library contains:
-- A C library, libkeybinder
-- Python bindings, python-keybinder
-- An examples directory with programs in C, Lua, Python and Vala.
-
-This package contains the Python bindings.
