@@ -1,5 +1,0 @@
-@comment $NetBSD: PLIST,v 1.1 2015/07/11 11:13:28 kamil Exp $
-${PYSITELIB}/keybinder/__init__.py
-${PYSITELIB}/keybinder/__init__.pyc
-${PYSITELIB}/keybinder/__init__.pyo
-${PYSITELIB}/keybinder/_keybinder.la
