@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2024,v 1.2524 2024/04/17 13:15:01 wiz Exp $
+$NetBSD: CHANGES-2024,v 1.2525 2024/04/17 13:17:23 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2024:
 
@@ -4178,3 +4178,4 @@ Changes to the packages collection and infrastructure in 2024:
 	Removed inputmethod/tegaki-pygtk [wiz 2024-04-17]
 	Removed www/ies4linux [wiz 2024-04-17]
 	Removed x11/driconf [wiz 2024-04-17]
+	Removed x11/py-keybinder [wiz 2024-04-17]
